# term-executor

./: .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
src/: AGENTS.md  auth.rs  basilica.rs  cleanup.rs  config.rs  consensus.rs  executor.rs  handlers.rs  main.rs  metrics.rs  sandbox.rs  session.rs  task.rs  validator_whitelist.rs  ws.rs
src/basilica/: client.rs  types.rs
src/evaluation/: evaluator.rs  mod.rs  orchestrator.rs  pipeline.rs  progress.rs
src/swe_forge/: client.rs  mod.rs  types.rs
src/task/: config.rs  mod.rs  registry.rs  types.rs
